--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 
 spring.profiles.active=test
 
+#logging.level.com.perennial.sme_payroll=TRACE
+
+#logging.pattern.console=%d [%level] %c{1.} [%t] %m%n
+#logging.file.name=applog.log
+#logging.pattern.file=%d [%level] %c{1.} [%t] %m%n
+
+
+
+
 
 
